tests/e2e/arg_name_shorthand_error4.story
function test arg:int
    return

arg = 0
test(:arg.a)
